# chess-data

./: .gitignore  README.md  pyproject.toml
data/mapped/: bervo-mapping-curated.tsv
src/chess_data/: __init__.py  bervo_mapper.py  cli.py  essdive.py  extraction.py
